--- a/Wpf_AuthorsBooksEFCoreDBFirst/App.xaml
+++ b/Wpf_AuthorsBooksEFCoreDBFirst/App.xaml
@@ -1,9 +1,10 @@
 ﻿<Application x:Class="Wpf_AuthorsBooksEFCoreDBFirst.App"
+             
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Wpf_AuthorsBooksEFCoreDBFirst"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:Wpf_AuthorsBooksEFCoreDBFirst.Views"
+             StartupUri="Views/MainWindow.xaml">
     <Application.Resources>
-         
+      
     </Application.Resources>
 </Application>
