--- a/Wpf_AuthorsBooksEFCoreDBFirst/Views/MainWindow.xaml
+++ b/Wpf_AuthorsBooksEFCoreDBFirst/Views/MainWindow.xaml
@@ -4,52 +4,50 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Wpf_AuthorsBooksEFCoreDBFirst.Views"
+        xmlns:vm="clr-namespace:Wpf_AuthorsBooksEFCoreDBFirst.ViewModels"
         mc:Ignorable="d"
         Title="MainWindow" Height="557" Width="800">
 
+    <!--<Window.DataContext>
+        <vm:MainViewModel/>
+    </Window.DataContext>-->
 
-    <Grid Background="#F5F5DC"
-        Margin="10,34,0,57">
-        <!-- верхнее меню -->
+    <Grid Background="#F5F5DC" Margin="10,34,0,57">
         <Menu VerticalAlignment="Top" Margin="25,0,15,0">
             <MenuItem Header="File">
-                <MenuItem Header="Save" Click="MenuItem_Save_Click"/>
-                <MenuItem Header="Exit" Click="MenuItem_Exit_Click"/>
+                <MenuItem Header="Save" Command="{Binding SaveCommand}"/>
+                <MenuItem Header="Exit" Command="{Binding ExitCommand}"/>
             </MenuItem>
             <MenuItem Header="Options">
-                <MenuItem Header="Add Author" Click="MenuItem_AddAuthor_Click"/>
-                <MenuItem Header="Remove Author" Click="MenuItem_RemoveAuthor_Click"/>
-                <MenuItem Header="Edit Author" Click="MenuItem_EditAuthor_Click"/>
-                <MenuItem Header="Add Book" Click="MenuItem_AddBook_Click"/>
-                <MenuItem Header="Remove Book" Click="MenuItem_RemoveBook_Click"/>
-                <MenuItem Header="Edit Book" Click="MenuItem_EditBook_Click"/>
+                <MenuItem Header="Add Author" Command="{Binding AddAuthorCommand}"/>
+                <MenuItem Header="Remove Author" Command="{Binding RemoveAuthorCommand}"/>
+                <MenuItem Header="Edit Author" Command="{Binding EditAuthorCommand}"/>
+                <MenuItem Header="Add Book" Command="{Binding AddBookCommand}"/>
+                <MenuItem Header="Remove Book" Command="{Binding RemoveBookCommand}"/>
+                <MenuItem Header="Edit Book" Command="{Binding EditBookCommand}"/>
             </MenuItem>
         </Menu>
 
-        <!-- выпадающий список -->
-        <ComboBox Name="AuthorsComboBox" 
-                   ItemsSource="{Binding Authors}"  
-                  DisplayMemberPath="Name" 
-                    SelectedItem="{Binding SelectedAuthor, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                  Margin="25,40,15,369" Width="760" RenderTransformOrigin="0.495,3.085"/>
+        <ComboBox ItemsSource="{Binding Authors}"
+                  SelectedItem="{Binding SelectedAuthor, Mode=TwoWay}"
+                  DisplayMemberPath="Name"
+                  Margin="25,40,15,369" Width="760" />
 
-        <!-- грид для книг -->
-        <DataGrid x:Name="BooksDataGrid"
-          ItemsSource="{Binding SelectedAuthor.Books, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-          AutoGenerateColumns="False" 
-          Margin="30,109,15,169"
-          SelectedItem="{Binding SelectedBook, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
+        <DataGrid ItemsSource="{Binding SelectedAuthorBooks}" 
+                  AutoGenerateColumns="False" 
+                  Margin="30,109,15,169"
+                  SelectedItem="{Binding SelectedBook, Mode=TwoWay}">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Title" Binding="{Binding Title, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
-                <DataGridTextColumn Header="Author Name" Binding="{Binding Author.Name, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                <DataGridTextColumn Header="Title" Binding="{Binding Title}"/>
+                <DataGridTextColumn Header="Author" Binding="{Binding Author.Name}"/>
             </DataGrid.Columns>
         </DataGrid>
-
+    
         <!-- фильтр -->
-        <CheckBox Name="FilterCheckBox" Content="Filter" 
-           HorizontalAlignment="Center"
-           Margin="30,307,10,107"
-           Checked="FilterCheckBox_Checked" 
-           Unchecked="FilterCheckBox_Unchecked"/>
+        <CheckBox Content="Filter by Book"
+          IsChecked="{Binding IsFilterEnabled, Mode=TwoWay}"
+          HorizontalAlignment="Center"
+          Margin="30,307,10,107"/>
+
     </Grid>
 </Window>
